Fix contact section spacing issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -521,7 +521,6 @@ section {
             .contact-item {
                 display: flex;
                 align-items: center;
-                justify-content: space-between;
                 p {
                     margin: .3rem 0 !important;
                     padding: 0 !important;
